// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > model > getModel > 200 > ok 1`] = `
{
  "model": {
    "_id": "test",
  },
}
`;

exports[`routes > model > getModel > audit > expected call 1`] = `
{
  "_id": "test",
}
`;
